refactor: Use new Table on Balance

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -37,12 +37,8 @@
 
 @media (max-width: (768/basefont)rem)
     .balance
-        table
+        .balance-table
             .account_name
                 maxed-flex-basis 60%
             .solde
                 maxed-flex-basis 40%
-            .bank_name
-                display none
-            .account_number
-                display none
