refactor: after review

--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -45,7 +45,7 @@
     td, th
         box-sizing  border-box
         padding 1em 0 1em 2rem
-        font-size em(16px)
+        font-size 1em
         flex-grow 1
         flex-shrink 0
         display block
@@ -54,7 +54,7 @@
             padding-right 2rem
 
         &.coz-table-td-secondary
-            font-size em(14px)
+            font-size .875em
 
     +medium-screen()
         tr
