🔨 refactor: rename categories to match linxo's

--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -101,7 +101,7 @@ uncategorizedMvts = cheques withdrawals uncategorized_transfers uncategorized_ot
 allMvts = childrenMvts dailyLifeMvts educationMvts healthMvts housingMvts incomeMvts leasuresMvts outBudgetMvts servicesMvts taxesMvts transportationMvts tripsMvts uncategorizedMvts
 
 // For now, all mouvements from same category use the same icon
-categories = children daily-life education health housing income leasures out-budget services taxes transportation trips uncategorized
+categories = kids dailyLife educationAndTraining health homeAndRealEstate incomeCat activities excludeFromBudgetCat services tax transportation goingOutAndTravel uncategorized
 
 // TODO use function to get each movement icon instead of category icon
 getTemporaryCatBkg(categoryLabel)
