--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -109,7 +109,7 @@
 
     // All icons and classes for categories types
 
-    categories = children daily-life education health housing income leasures out-budget services taxes transportation trips uncategorized
+    categories = kids dailyLife educationAndTraining health homeAndRealEstate incomeCat activities excludeFromBudgetCat services tax transportation goingOutAndTravel uncategorized
 
     getCatBkg(categoryLabel)
         icon = '../../assets/icons/categories/icon-cat-%s.svg' % categoryLabel
