--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -69,51 +69,17 @@
     .bnk-op-date-header
         display none
 
-// All icons and classes for movement types
-
-childrenMvts = children_activities pocket_money school_insurance child-care toys child_support school_restaurant children_others
-
-dailyLifeMvts = regular_shopping pets gifts cosmetics donations clothing telecom personal_loan_refund shopping meals press daily_life_others
-
-educationMvts = lessons school_fees education_supplies student_load_refund education_others
-
-healthMvts = health_insurance health_costs health_refunds health_others
-
-housingMvts = housing_insurance housing_costs water electricity rent furnitures mortgage_refund house_works housing_others
-
-incomeMvts = allowances gift_incomes dividends interests pension complementary_incomes replacement_incomes rental_incomes salary income_others
-
-leasuresMvts = leasures_subscription leasures_lessons electronic leasures_supplies multimedia hobbies leasures_others
-
-outBudgetMvts = security_purchases security_sales advances refunds releasings expenses_bill deferred_debit saving_transfer internal_transfer out-budget_others
-
-servicesMvts = home_help financial_consulting legal_consulting bank_charges post services_others
-
-taxesMvts = social_contributions income_tax wealth_tax property_tax taxes_others
-
-transportationMvts = car_purchase car_insurance fuel vehicle_maintenance garage vehicle_rental parking_costs vehicle_loan_refund taxi public_transportation transportation_others
-
-tripsMvts = trips_transportation restaurants cultural_trips relaxation_trips journeys trips_others
-
-uncategorizedMvts = cheques withdrawals uncategorized_transfers uncategorized_others
-
-// GATHERED
-allMvts = childrenMvts dailyLifeMvts educationMvts healthMvts housingMvts incomeMvts leasuresMvts outBudgetMvts servicesMvts taxesMvts transportationMvts tripsMvts uncategorizedMvts
-
 // For now, all mouvements from same category use the same icon
 categories = kids dailyLife educationAndTraining health homeAndRealEstate incomeCat activities excludeFromBudgetCat services tax transportation goingOutAndTravel uncategorized
 
 // TODO use function to get each movement icon instead of category icon
 getTemporaryCatBkg(categoryLabel)
-    icon = '../../assets/icons/categories/icon-cat-%s.svg' % categoryLabel
-    background-image embedurl(icon) // @stylint ignore
 
-for num in 0..12
-    mvtsList = allMvts[num]
-    category = categories[num]
-    for mvt in mvtsList
-        .bnk-table-desc--{mvt}
-            getTemporaryCatBkg(category)
+
+for category in categories
+    .bnk-table-desc--{category}
+        icon = '../../assets/icons/categories/icon-cat-%s.svg' % category
+        background-image embedurl(icon) // @stylint ignore
 
 +medium-screen()
     .coz-table-body .coz-table-row
