feat: Add icon on transaction actions :art:

--- a/src/ducks/transactions/TransactionActions.styl
+++ b/src/ducks/transactions/TransactionActions.styl
@@ -1,14 +1,10 @@
 @require 'cozy-ui'
 
-.action-bill
-    background embedurl('../../assets/icons/actions/icon-file.svg') em(16px) center no-repeat
-.action-attach
-    background embedurl('../../assets/icons/actions/icon-link.svg') em(16px) center no-repeat
-.action-comment
-    background embedurl('../../assets/icons/actions/icon-comment.svg') em(16px) center no-repeat
-.action-app
-.action-refund
-.action-url
-    background embedurl('../../assets/icons/actions/icon-link-out.svg') em(16px) center no-repeat
-.action-alert
-    background embedurl('../../assets/icons/actions/icon-bell-16.svg') em(16px) center no-repeat
+.action
+    position relative
+    padding em(8px) 0 em(8px) em(42px)
+
+    svg
+        position absolute
+        top 8px
+        left 15px
