--- a/src/ducks/commons/Nav.styl
+++ b/src/ducks/commons/Nav.styl
@@ -16,10 +16,10 @@
 
         +small-screen()
             padding-top 0
+            min-width inherit
             svg
                 display block
                 width 1.15rem
                 height 1.15rem
                 margin auto
                 margin-bottom 0.25rem
-
