--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -56,6 +56,9 @@
         &.coz-table-td-secondary
             font-size .875em
 
+        &.coz-table-td-fix
+            flex-grow 0
+
     +medium-screen()
         tr
             max-width  100vw
