--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -43,7 +43,7 @@
 
     .bnk-table-category-category
         maxed-flex-basis 30%
-        text-transform uppercase
+        text-transform capitalize
 
     .bnk-table-percentage
         maxed-flex-basis 10%
