--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -20,20 +20,11 @@
         maxed-flex-basis 10%
 
     .bnk-transaction-mobile
-        .icon
-            flex 0 0 4em
-            padding-top 0
-            padding-bottom 0
-        .content
-            flex 1 0 auto
-            display flex
-            align-items center
-            padding-left 0
-            .label
-                flex 1 0 60%
-            .amount
-                flex 1 0 40%
-                text-align right
+        & > td
+            width 100%
+        &:last-child
+            border-bottom 0
+
     tbody
         .bnk-op-amount
         .bnk-op-desc
