🎨 style: small vertical padding on section header

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -58,7 +58,7 @@
                 font-size em(12px)
                 text-transform uppercase
                 font-weight bold
-                padding 0 1rem
+                padding 0.125rem 1rem
                 line-height em(16px)
 
     tbody
