--- a/src/styles/spacers.styl
+++ b/src/styles/spacers.styl
@@ -18,7 +18,7 @@ directions = {
     r: right
 }
 
-:global
+:global // @stylint ignore
     for kType, vType in types
         for kSize, vSize in sizes
             // all
@@ -32,5 +32,5 @@ directions = {
                 {vType}-bottom: vSize
             for kDir, vDir in directions
                 .u-{kType}{kDir}-{kSize}
-                    {vType}-{vDir}: vSize
+                    {vType}-{vDir}: vSize  // @stylint ignore
 
