--- a/src/targets/mobile/index.ejs
+++ b/src/targets/mobile/index.ejs
@@ -19,7 +19,7 @@
   {{.CozyBar}}
   <% } %>
   <%  if (__STACK_ASSETS__ || (__DEVELOPMENT__ && __TARGET__ !== 'mobile')) { %>
-  // <script src="//{{.Domain}}/assets/js/piwik.js" defer></script>
+  <script src="//{{.Domain}}/assets/js/piwik.js" defer></script>
   <% } %>
 </head>
 <div
