fix: check hover :art:

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -94,7 +94,7 @@
         font-size .8em
         font-weight bold
 
-    .active
+    .active, .active:hover
         border-left-color dodger-blue
         background  embedurl('../../assets/icons/icon-checked-blue.svg') 98% center no-repeat
         font-weight bold
