fix: hover backgroud :bug:

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -99,6 +99,9 @@
         background  embedurl('../../assets/icons/icon-checked-blue.svg') 98% center no-repeat
         font-weight bold
 
+    .active:hover
+        background-color silver
+
     .account-count
         padding-left .5em
         color cool-grey
