feat: Add Breadcrumb on categories :sparkles:

--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -3,7 +3,7 @@
 $coz-bar-size = 48px
 
 .Topbar-title
-    > h2
+    h2
         margin 0 auto 1.5em
 
 .Topbar-left
@@ -28,7 +28,7 @@ $coz-bar-size = 48px
         white-space    nowrap
         line-height    1
 
-        > h2
+        h2
             font-size 1.3em
             margin    0
             margin-left 1rem
