🔨 refactor: remove em() function

--- a/src/components/Figure/FigureBlock.styl
+++ b/src/components/Figure/FigureBlock.styl
@@ -7,12 +7,12 @@
         color cool-grey
         margin 0
         text-transform uppercase
-        font-size em(12px)
-        line-height em(16px)
+        font-size 0.75rem
+        line-height 1rem
 
     .bnk-figure
-        font-size em(32px)
-        line-height em(42px)
+        font-size 2rem
+        line-height 2.625rem
 
 @media (max-width: (768/basefont)rem)
     .bnk-figure-wrapper
