--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -71,7 +71,7 @@ content-padding-small = 1rem
         display block
 
 .coz-sidebar
-    width            em(220px)
+    width            13.75rem
     border-right     1px solid silver
     background-color pale-grey
 
