--- a/src/ducks/authentication/styles.styl
+++ b/src/ducks/authentication/styles.styl
@@ -56,7 +56,7 @@
         background-size contain
 
     .illustration-waiting
-        max-width em(150px)
+        max-width 9.375rem
         margin 50% auto 10%
 
     .wizard-main
@@ -70,14 +70,14 @@
     .description
         text-align center
         margin     .5em 0
-        font-size  em(18px)
+        font-size  1.125rem
         max-width  25em
 
     .input
         width            100%
         border           none
         padding .5em .2em
-        font-size        em(22px)
+        font-size        1.375rem
         background-color white
 
 
