--- a/src/ducks/transactions/TransactionActions.styl
+++ b/src/ducks/transactions/TransactionActions.styl
@@ -3,7 +3,7 @@
 .action
     cursor pointer
     position relative
-    padding em(8px) 0 em(8px) em(42px)
+    padding 0.5rem 0 0.5rem 2.625rem
 
     svg
         position absolute
