--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -55,11 +55,11 @@
             td
                 background-color pale-grey
                 color cool-grey
-                font-size em(12px)
+                font-size 0.75rem
                 text-transform uppercase
                 font-weight bold
                 padding 0.125rem 1rem
-                line-height em(16px)
+                line-height 1rem
 
     tbody
         overflow inherit!important
