--- a/src/components/Loading/Loading.styl
+++ b/src/components/Loading/Loading.styl
@@ -4,19 +4,19 @@
     text-align center
     &:before
         content     ''
-        margin      em(80px) auto 0
-        width       em(80px)
-        height      em(80px)
+        margin      5rem auto 0
+        width       5rem
+        height      5rem
         @extend $icon-spinner-blue
 
     h2
         font-size(24px)
-        margin         em(33px) auto 0
+        margin         2.0625rem auto 0
         line-height    1.3
         color          charcoal-grey
         letter-spacing -.2px
     p
-        margin-top  em(15px)
+        margin-top  0.9375rem
         color       cool-grey
         line-height 1.5
 
@@ -28,9 +28,9 @@
 @media (max-width: (1023/basefont)rem)
     .bnk-loading
         &:before
-            width  em(55px)
-            height em(55px)
+            width  3.4375rem
+            height 3.4375rem
         h2
-            margin em(33px) 1.5em 0
+            margin 2.0625rem 1.5em 0
         p
-            margin em(5px) 1.5em 0
+            margin 0.3125rem 1.5em 0
