🔨 refactor: use breakpoints

--- a/src/components/Figure/FigureBlock.styl
+++ b/src/components/Figure/FigureBlock.styl
@@ -1,4 +1,5 @@
 @require 'cozy-ui'
+@require '../../styles/breakpoints.styl'
 
 .bnk-figure-wrapper
     color charcoal-grey
@@ -14,6 +15,6 @@
         font-size 2rem
         line-height 2.625rem
 
-@media (max-width: (768/basefont)rem)
++small-screen()
     .bnk-figure-wrapper
         font-size .7em
