--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -107,7 +107,7 @@
         color cool-grey
         font-size .8em
 
-@media (max-width: (1023/basefont)rem)
++medium-screen()
     .account-switch
         z-index 60
         position fixed
@@ -147,7 +147,7 @@
             background-image embedurl('../../assets/icons/actions/filter-active.svg')
 
 
-@media (max-width: (768/basefont)rem)
++small-screen()
     .account-switch
         top 0
         right 0
