--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -35,7 +35,7 @@
                             vertical-align middle
                             margin-bottom 3px
 
-@media (max-width: (768/basefont)rem)
++small-screen()
     .balance
         .balance-table
             .account_name
