--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -9,7 +9,7 @@ $coz-bar-size = 48px
 .Topbar-left
     display none
 
-@media (max-width: (768/basefont)rem)
++small-screen()
     .Topbar-title
         bottom-spaced(10px)
         right-spaced(32px)
