🔨 refactor: only require what we need from cozy ui

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -1,4 +1,5 @@
-@require 'cozy-ui'
+@require 'settings/palette.styl'
+@require 'objects/layouts.styl'
 @require '../../styles/breakpoints.styl'
 
 .coz-layout
