--- a/src/components/Loading/Loading.styl
+++ b/src/components/Loading/Loading.styl
@@ -1,4 +1,5 @@
-@require 'cozy-ui'
+@require 'settings/palette.styl'
+@require 'components/button.styl'
 @require '../../styles/breakpoints.styl'
 
 .bnk-loading, .bnk-loading--no-margin
