--- a/src/ducks/commons/Nav.styl
+++ b/src/ducks/commons/Nav.styl
@@ -1,5 +1,6 @@
-@require 'cozy-ui'
+@require 'settings/palette.styl'
 @require '../../styles/breakpoints.styl'
+@require 'objects/nav.styl'
 
 [role=application]// @stylint ignore
     @extend $navigation
