--- a/src/ducks/menu/ActionMenu.styl
+++ b/src/ducks/menu/ActionMenu.styl
@@ -1,4 +1,6 @@
-@require 'cozy-ui'
+@require 'settings/palette.styl'
+@require 'components/button.styl'
+@require 'components/popover.styl'
 
 .fil-actionmenu
     @extend        $popover
