--- a/src/ducks/settings/GroupsSettings.styl
+++ b/src/ducks/settings/GroupsSettings.styl
@@ -1,4 +1,5 @@
-@require 'cozy-ui'
+@require 'settings/palette'
+@require 'components/forms.styl'
 @require '../../styles/breakpoints.styl'
 @require '../../styles/mixins.styl'
 
