--- a/src/ducks/transactions/TransactionMenu.styl
+++ b/src/ducks/transactions/TransactionMenu.styl
@@ -1,4 +1,5 @@
-@require 'cozy-ui'
+@require 'settings/palette.styl' // TODO remove, its components/button.styl that needed it
+@require 'components/button.styl'
 
 .fil-toolbar-more-btn
     @extends $button--secondary
