--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -1,4 +1,4 @@
-@require 'cozy-ui'
+@require 'settings/palette.styl'
 @require '../../styles/mixins.styl'
 @require '../../styles/breakpoints.styl'
 
