--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -36,7 +36,8 @@
 
 // Table
 .bnk-table-category
-    composes full-width-table from '../../components/Layout/Layout.styl'
+    @extend $full-width-table
+
     tbody tr
         cursor  pointer
 
