--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -2,7 +2,7 @@
 @require '../../styles/breakpoints.styl'
 
 .bnk-op-table
-    composes full-width-table from '../../components/Layout/Layout.styl'
+    @extend $full-width-table
 
     .bnk-op-date
         maxed-flex-basis 15%
