--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -47,25 +47,16 @@ body
 padded-content(pad)
     padding pad
 
-    .full-width
-        margin-left (- pad)
-        margin-right (- pad)
-
-    .full-width-table
-        margin-left (- pad)
-        margin-right (- pad)
-        width "calc(100% + %s)" % (2 * pad)
-
 content-padding = 2em
 content-padding-small = 1rem
 
 .coz-content
     width 100%
-    padded-content(content-padding)
+    padding content-padding
 
     +small-screen()
         &
-            padded-content(content-padding-small)
+            padding content-padding-small
 
     +medium-screen()
         display block
