--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,8 +1,9 @@
 @require '../../styles/breakpoints.styl'
 @require '../../components/Layout/Layout.styl'
+@require '../../styles/mixins.styl'
 
 .bnk-coz-tab-list
-    composes full-width from '../../components/Layout/Layout.styl'
+    @extend $full-width
     padding-left content-padding
 
 .bnk-tabs .bnk-coz-tab-list
