🔨 refactor: use variables file not to import unnecessarily Layout

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -1,5 +1,6 @@
 @require 'objects/layouts.styl'
 @require '../../styles/breakpoints.styl'
+@require '../../styles/variables.styl'
 
 .coz-layout
     @extend    $app-2panes-sticky
@@ -46,9 +47,6 @@ body
 
 padded-content(pad)
     padding pad
-
-content-padding = 2em
-content-padding-small = 1rem
 
 .coz-content
     width 100%
