--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -1,5 +1,5 @@
 @require '../../styles/breakpoints.styl'
-@require '../../components/Layout/Layout.styl'
+@require '../../styles/variables.styl'
 
 // Due to discrepancies between Chrome and Firefox in
 // how select height is computed, we set it directly
