--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,5 +1,5 @@
 @require '../../styles/breakpoints.styl'
-@require '../../components/Layout/Layout.styl'
+@require '../../styles/variables.styl'
 @require '../../styles/mixins.styl'
 
 .bnk-coz-tab-list
