--- a/src/styles/mixins.styl
+++ b/src/styles/mixins.styl
@@ -1,5 +1,5 @@
-@require '../../components/Layout/Layout.styl'
 @require './variables.styl'
+@require '../../styles/breakpoints.styl'
 
 /**
 Due to a IE11 bug, we need to specify max-width when using
