✨ feat: better alignments margins

--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -8,7 +8,8 @@ $coz-bar-size = 48px
 
 .Topbar-title
     h2
-        margin 0 auto 1.5em
+        font-size 1.5rem
+        margin 0 auto 2rem
 
 .Topbar-left
     display none
