--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -15,3 +15,9 @@
             width 100%
             text-align center
 
+
+.settings__title.settings__title
+    margin-bottom 0.9375rem
+
+    +small-screen()
+        margin-bottom 0
