✨ feat: display a grey arrow on desktop for the back button

--- a/src/components/BackButton/style.styl
+++ b/src/components/BackButton/style.styl
@@ -8,3 +8,12 @@
 
 .back-button button
     border none
+
+.back-arrow.back-arrow
+    color cool-grey
+    display inline-block
+    float left
+    font-size 1.25rem
+    line-height 1.5
+    margin-right 1.5rem
+    cursor pointer
