--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -6,7 +6,7 @@
     border 0
     padding 0
     font-weight bold
-    min-height auto
+    min-height 1.25rem
 
     &:not([disabled]):not([aria-disabled=true]):hover,
     &:active,
