🐝 fix: have the topbar/account switch work on mobile

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -1,3 +1,7 @@
+// TODO understand why this is necessary
+// for the account switch to work on mobile
+@require 'objects/*'
+
 @require 'tools/mixins.styl'
 
 .account-switch
