--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -1,3 +1,7 @@
+// TODO understand why this is necessary
+// for the topbar to work on mobile
+@require 'objects/*'
+
 @require '../../styles/breakpoints.styl'
 
 $coz-bar-size = 48px
