🔨 refactor: do not use spaced functions

--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -16,9 +16,9 @@ $coz-bar-size = 48px
 
 +small-screen()
     .Topbar-title
-        bottom-spaced(10px)
-        right-spaced(32px)
-        left-spaced(32px)
+        margin-bottom 10px
+        margin-right 32px
+        margin-left 32px
         display     flex
         align-items center
         margin   0
