✨ feat: decrease font size for figure block on mobile

--- a/src/components/Figure/FigureBlock.styl
+++ b/src/components/Figure/FigureBlock.styl
@@ -3,17 +3,22 @@
 .bnk-figure-wrapper
     color charcoal-grey
 
-    .bnk-figure-label
-        color cool-grey
-        margin 0
-        text-transform uppercase
-        font-size 0.75rem
-        line-height 1rem
+.bnk-figure-label
+    color cool-grey
+    margin 0
+    text-transform uppercase
+    font-size 0.75rem
+    line-height 1rem
 
-    .bnk-figure
-        font-size 2rem
-        line-height 2.625rem
+.bnk-figure
+    font-size 2rem
+    line-height 2.625rem
 
 +small-screen()
     .bnk-figure-wrapper
         font-size .7em
+
+    .bnk-figure
+        font-size 1.5rem
+        line-height 1.75rem
+        padding-bottom 0.5rem
