fix: accounts style

--- a/src/ducks/settings/AccountsSettings.styl
+++ b/src/ducks/settings/AccountsSettings.styl
@@ -4,6 +4,7 @@
 .AcnsStg
     &__accounts
         @extend $full-width-table
+        padding-bottom 2rem
 
         td
             text-overflow ellipsis
