--- a/src/styles/breakpoints.styl
+++ b/src/styles/breakpoints.styl
@@ -6,22 +6,22 @@ medium=1023
 small=768
 tiny=543
 
-tiny-screen()
-    @media (max-width: (tiny/basefont)rem)
+tiny-screen(direction='max')
+    @media ({direction}-width: (tiny/basefont)rem)
         {block} // @stylint ignore
 
-small-screen()
-    @media (max-width: (small/basefont)rem)
+small-screen(direction='max')
+    @media ({direction}-width: (small/basefont)rem)
         {block} // @stylint ignore
 
-medium-screen()
-    @media (max-width: (medium/basefont)rem)
+medium-screen(direction='max')
+    @media ({direction}-width: (medium/basefont)rem)
         {block} // @stylint ignore
 
-large-screen()
-    @media (max-width: (large/basefont)rem)
+large-screen(direction='max')
+    @media ({direction}-width: (large/basefont)rem)
         {block} // @stylint ignore
 
-extra-large-screen()
-    @media (max-width: (extralarge/basefont)rem)
+extra-large-screen(direction='max')
+    @media ({direction}-width: (extralarge/basefont)rem)
         {block} // @stylint ignore
